Fixed radiobutton and checkbox alignment bugs.

--- a/src/less/controlgroup.less
+++ b/src/less/controlgroup.less
@@ -86,3 +86,10 @@
 		}
 	}
 }
+
+@media (min-width: 28em){
+	.ui-field-contain .ui-controlgroup .ui-controlgroup-controls {
+		width: inherit;
+		display: inherit;
+	}
+}
